[package]
name = "superdevs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
thiserror = "1.0"
dotenv = "0.15"
bs58 = "0.5"
base64 = "0.21"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
